# MMCP_2026_Artifact_Hybrid_Inference

./: .gitignore  .gitmodules  README.md  install-MAIA.sh  setup_env_claix23.sh
maia/: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  configure.py
maia/auxiliary/: addenv.py  analyze.sh.in  checkPropertyAccesses.sh  check_clang_tidy.sh  cleansvn.sh  commit.py  compile_claix.sh  coverage.py  distclean.sh  enable_autosave.sh  gitlab_issues_from_todos.py  notfound.py  print_properties.py  reset.sh  svn_export_without_ignored.py  what.py
maia/auxiliary/compilers/: AMD.cmake  Clang.cmake  Cray.cmake  Fujitsu.cmake  GNU.cmake  IBM.cmake  Intel.cmake  NVHPC.cmake  PGI.cmake  README
maia/auxiliary/convert_grid_file/: compile_AIA.sh  compile_Hazelhen.sh  compile_Juqueen.sh  convert_grid_file.c
maia/auxiliary/hosts/: AIA.cmake  CLAIX.cmake  Hawk.cmake  Host.cmake.in  Jureca.cmake  Juwels.cmake  Klogin.cmake  Mac.cmake  PSG.cmake  PizDaint.cmake  Power8.cmake  README
maia/auxiliary/memory_consumption/: README.txt  memoryConsumption.cpp
maia/auxiliary/regex/: 00_m_bndId.sh  01_m_bndryId.sh  02_m_delete.sh  03_m_flowCellId.sh  04_m_globalId.sh  05_m_haloLayer.sh  06_m_hasBeenRefined.sh  07_m_inShadowLayer.sh  08_m_isBndryCell.sh  09_m_isBndryGhostCell.sh  10_m_isGHaloCell.sh  11_m_isGWindowCell.sh  12_m_isInterface.sh  13_m_isInterfaceChild.sh  14_m_isInterfaceParent.sh  15_m_kappa.sh  16_m_level.sh  17_m_noChildIds.sh  18_m_noOffsprings.sh  19_m_noRcnstrctnNghbrIds.sh  20_m_nu.sh  21_m_onlyBoundary.sh  22_m_parentId.sh  23_m_periodicDirection.sh  24_m_quasiPeriodicDirection.sh  25_m_regridTrigger.sh  26_m_spongeBndryId1.sh  27_m_spongeBndryId2.sh  28_m_spongeBndryId3.sh  29_m_spongeFactor.sh  30_m_spongeFactorStart.sh  31_m_vortexCriterion.sh  32_m_weight.sh  33_m_workLoad.sh  34_b_properties.sh  35_m_bandNghbrIds.sh  36_m_bodyId.sh  37_m_childIds.sh  38_m_coordinates.sh  39_m_curvature.sh  (+29 more)
maia/auxiliary/scorep/: DG.filter  README.md
maia/cmake/: Configure.cmake  GetCompiler.cmake  GetHost.cmake  GetSubdirectories.cmake  InList.cmake  Join.cmake  Setc.cmake
maia/doc/: CMakeLists.txt  Doxyfile.in  Doxyfile_fast.in  README  documentation.html  latexFunctions.tex  latexFunctions_comments.txt  likwid.md
maia/doc/dg/: README.md  autosave.md  firststeps.md  hp_refinement.md  point_data.md
maia/doc/include/: header.html
maia/doc/pages/: properties.md
maia/include/canteraInstall/: README.txt
maia/src/: CMakeLists.txt  application.cpp  application.h  cartesiansolver.h  compiler_config.h  config.h  enums.cpp  enums.h  environment.cpp  environment.h  executionrecipe.h  factory.h  filter.h  globals.h  globalvariables.cpp  globalvariables.h  maia.cpp  maia.h  nvhpcbugfix.cpp  property.cpp  property.h  solver.cpp  solver.h  typetraits.h  variables.cpp  variables.h
maia/src/ACA/: acaobserverdatacollector.h  acapostprocessing.h  acapostprocessing.hpp  acasolver.cpp  acasolver.h  acasurfacedatacollector.h
maia/src/COMM/: globalmpiinfo.cpp  globalmpiinfo.h  mpi.h  mpiexchange.h  mpioverride.cpp  mpioverride.h
maia/src/COUPLER/: couplerfvmultilevel.cpp  couplerfvmultilevel.h  couplerlbfv.cpp  couplerlbfv.h  couplerlbfveemultiphase.cpp  couplerlbfveemultiphase.h  couplerlblb.cpp  couplerlblb.h  coupling.h  couplingdgape.cpp  couplingdgape.h  couplinglpt.h  couplingutils.h  dgccacousticperturbsourcefiles.cpp  dgccacousticperturbsourcefiles.h  fvcartesianinterpolation.cpp  fvcartesianinterpolation.h  fvmbzonal.cpp  fvmbzonal.h  fvparticle.cpp  fvparticle.h  fvzonal.cpp  fvzonal.h  fvzonalrtv.cpp  fvzonalrtv.h  fvzonalstg.cpp  fvzonalstg.h  lbdgape.cpp  lbdgape.h  lblpt.cpp  lblpt.h  lbrb.cpp  lbrb.h  lsfv.cpp  lsfv.h  lsfvcombustion.cpp  lsfvcombustion.h  lsfvmb.cpp  lsfvmb.h  lslb.cpp  (+6 more)
maia/src/DG/: dgcartesianbcacousticperturbcbc.h  dgcartesianbcacousticperturbrbc.h  dgcartesianbcacousticperturbsolidwall.h  dgcartesianbcacousticperturbstraightductexit.h  dgcartesianbcexact.h  dgcartesianbcfactoryacousticperturb.cpp  dgcartesianbcfactorylinearscalaradv.cpp  dgcartesianboundarycondition.h  dgcartesianboundaryconditionfactory.h  dgcartesianelementcollector.h  dgcartesiangalerkinprojection.cpp  dgcartesiangalerkinprojection.h  dgcartesiangridmap.h  dgcartesianhelementcollector.h  dgcartesianinterpolation.cpp  dgcartesianinterpolation.h  dgcartesianmortar.h  dgcartesianslices.h  dgcartesiansolver.cpp  dgcartesiansolver.h  dgcartesiansolver_inst_2d_acousticperturb.cpp  dgcartesiansolver_inst_2d_linearscalaradv.cpp  dgcartesiansolver_inst_3d_acousticperturb.cpp  dgcartesiansolver_inst_3d_linearscalaradv.cpp  dgcartesiansponge.h  dgcartesianspongeelementcollector.h  dgcartesiansurfacecollector.h  dgcartesiansyseqn.h  dgcartesiansyseqnacousticperturb.cpp  dgcartesiansyseqnacousticperturb.h  dgcartesiansyseqnlinearscalaradv.h  dgcartesiantimers.h  sbpcartesianinterpolation.h  sbpcartesianmortar.h  sbpcartesianoperators.h
maia/src/FC/: fcbndrycnd.cpp  fcbndrycnd.h  fccellcollector.h  fccellproperties.h  fcdescriptor.h  fcgridbndrycell.h  fcsolver.cpp  fcsolver.h
maia/src/FV/: fvcartesianapesolver2d.cpp  fvcartesianapesolver2d.h  fvcartesianapesolver3d.cpp  fvcartesianapesolver3d.h  fvcartesianbndrycell.cpp  fvcartesianbndrycell.h  fvcartesianbndrycndxd.cpp  fvcartesianbndrycndxd.h  fvcartesianbndrycndxd_inst_2d_detchem.cpp  fvcartesianbndrycndxd_inst_2d_ns.cpp  fvcartesianbndrycndxd_inst_2d_rans_fs.cpp  fvcartesianbndrycndxd_inst_2d_rans_komega.cpp  fvcartesianbndrycndxd_inst_2d_rans_sa.cpp  fvcartesianbndrycndxd_inst_3d_detchem.cpp  fvcartesianbndrycndxd_inst_3d_eegas.cpp  fvcartesianbndrycndxd_inst_3d_ns.cpp  fvcartesianbndrycndxd_inst_3d_rans_fs.cpp  fvcartesianbndrycndxd_inst_3d_rans_komega.cpp  fvcartesianbndrycndxd_inst_3d_rans_sa.cpp  fvcartesiancellcollector.h  fvcartesiancellproperties.h  fvcartesiansolverxd.cpp  fvcartesiansolverxd.h  fvcartesiansolverxd_inst_2d_detchem.cpp  fvcartesiansyseqnns.cpp  (+65 more)
maia/tst/: CMakeLists.txt  test_lb_functions.cpp  test_lb_latticedescriptor.cpp  test_maia.cpp
(+416 files in other folders)
